Homepage animations, Portfolio overflow fix, Photo Tabs fix

--- a/css/page-builder.css
+++ b/css/page-builder.css
@@ -25,6 +25,8 @@
 
 .about {
     margin-right: 100px;
+    opacity: 0;
+    animation: herofadeIn 1s ease forwards 3.8s; /* Apply herofadeIn animation */
 }
 
 .about h3 span {
@@ -66,13 +68,36 @@ border-radius: 200px;
 }
 
 .masthead h1 {
-    font-size: 2rem;
-    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+    font-size: 3rem;
+    text-shadow: 3px 3px 5px rgb(0, 0, 0);
     z-index: 2;
-    margin-top: 200px;
-    padding-top: 100px;
-    margin: 10px;
+    margin-top: 50px;
+    padding-top: 50px;
+    max-width: 90vw;
+    margin-bottom: 100px;
+    position: relative; /* Added to position ::after correctly */
 }
+
+.masthead h1::after {
+    content: "";
+    position: absolute;
+    bottom: -10px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 0%; /* Initial state */
+    height: 7px;
+    background: #E59C59;
+    border-radius: 200px;
+    animation: expandWidth 0.9s ease-in-out 2.3s forwards; /* 4s delay and animation */
+}
+
+@keyframes expandWidth {
+    to {
+        width: 100%; /* Final state */
+    }
+}
+
+
 
 .hero-content {
     position: relative;
@@ -101,6 +126,7 @@ border-radius: 200px;
 .hero-info {
     display: column;
     text-align: left;
+    margin-left: 40px;
 }
 
 .hero-content .column {
@@ -114,16 +140,39 @@ border-radius: 200px;
     transition: 1s ease;
     height: fit-content;
     width: fit-content;
-    margin-top: 20px;
+    margin-top: 5px;
+    opacity: 0; /* Start invisible */
+    animation: herofadeIn 1s ease forwards; /* Apply herofadeIn animation */
 }
 
+/* Staggered delays for each column */
+.hero-content .column:nth-child(1) {
+    animation-delay: 3.4s; /* First column starts after 2.8s */
+}
+
+.hero-content .column:nth-child(2) {
+    animation-delay: 3.0s; /* Second column starts 0.5s later */
+}
+
+.hero-content .column:nth-child(3) {
+    animation-delay: 2.6s; /* Third column starts 0.5s after the second */
+}
+
+@keyframes herofadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
 .hero-content .column:hover {
     transform: scale(1.02);
 }
 
 .hero-content img {
     width: 100px;
-    margin: 20px;
+    margin: 10px;
 }
 
 .hero-content h2 {
@@ -533,7 +582,7 @@ font-size: 1.5rem;
     .masthead .overlay {}
     
     .masthead h1 {
-        margin-top: 150px;
+        margin-top: 50px;
         font-size: 1.7rem;
         padding-top: 0px;
 
@@ -572,7 +621,10 @@ font-size: 1.5rem;
     .hero-content .column:hover {
         background-color: #000000e8;
         transform: scale(1.01);
+    }
 
+    .hero-info {
+        margin-left: 10px;
     }
     
     .hero-content img {
