--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ ol {
 
 h1 {
   font-family: "montserrat";
-  font-weight: 700;
+  font-weight: 300;
   color: white;
 }
 
@@ -250,11 +250,11 @@ height: 60px;
   text-decoration: none;
   color: white;
   font-weight: 100;
-  transition: color 0.3s ease;
+  transition: 0.3s ease;
 }
 
 .menu li a:hover {
-  color: #00A4A2 !important;
+  font-weight: 400 !important;
 }
 
 .menu li a::after {
@@ -276,6 +276,10 @@ height: 60px;
 
 .main-navigation .current-menu-item > a::after {
   width: 100%; /* Keep underline for active page */
+}
+
+.main-navigation .current-menu-item > a {
+  font-weight: 400 !important;
 }
 
 
